# gan-diffusion-c

./: CMakeLists.txt  LICENSE  Makefile  dev.md
include/: AnimationManager.h  ImageManager.h  common.h  diffusion.h  game.h  gan.h  linalg.h  nn.h  optimizer.h
src/: AnimationManager.c  ImageManager.c  game.c  gan.c  linalg.c  main.c  nn.c
